# pixctrl

./: CMakeLists.txt  Makefile  ffplay.txt
include/: pixctrl.h  pixctrl_type.h
lib/: CMakeLists.txt  dummy.c
lib/common/: CMakeLists.txt  util.c  util.h
lib/generic/convert/: CMakeLists.txt  rgb2rgb.c  rgb2rgb.line.stripe.c  rgb2yuv.c  rgb2yuv.line.stripe.c  yuv2yuv.c  yuv2yuv.line.stripe.c
lib/generic/mixer/: CMakeLists.txt
lib/generic/resize/: CMakeLists.txt
resource/rgb/: abgr-1280x720.raw  argb-1280x720.raw  bgr24-1280x720.raw  bgra-1280x720.raw  rgb24-1280x720.raw  rgba-1280x720.raw
resource/yuv/: nv12-1280x720.raw  nv21-1280x720.raw  uyvy422-1280x720.raw  vyuy422-1280x720.raw  yuv420p-1280x720.raw  yuv422p-1280x720.raw  yuv444-1280x720.raw  yuv444p-1280x720.raw  yuyv422-1280x720.raw  yvyu422-1280x720.raw
test/: CMakeLists.txt
test/sample/: CMakeLists.txt  main.c  rgb2rgb.c  rgb2yuv.c  test_vector.h  yuv2yuv.c
test/util/: CMakeLists.txt  util.c  util.h  util.linux.c
toolchain/: aarch64-none-linux-gnu.cmake  gnu.toolchain.cmake  host-gnu.cmake
